Fix layout width on mobile

--- a/src/layout/layout.less
+++ b/src/layout/layout.less
@@ -93,7 +93,7 @@ code {
 .ds-main__content-inner {
 	flex-grow: 1;
 	max-width: 50em;
-	min-width: 36em;
+	width: 100%;
 	margin-left: auto;
 	margin-right: auto;
 }
